# MemoryCustodian

./: .gitignore  .version-bump.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PRIVACY.md  README.md  RELEASE-NOTES.md  TERMS.md  install.sh  memory-custodian-v0.9.1.zip.sha256  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
adapters/claude-code/: CLAUDE.snippet.md  install.md
adapters/codex/: AGENTS.snippet.md  install.md
adapters/gemini/: GEMINI.snippet.md  install.md
adapters/generic/: agent-instructions.md
cli/memory_custodian/: __init__.py  add.py  check.py  compact.py  enable.py  forget.py  init.py  main.py  migrate.py  mutations.py  protocol.py  read.py  status.py  templates.py
cli/memory_custodian.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
demo/: prepare-nightnotes.sh
docs/: MemoryCustodian_v0.8_Reliability_Implementation_Plan_Revised.md
docs/evaluations/: nightnotes-codex-gpt-5.6.md
docs/memory/: brief.md  changelog.md  constraints.md  decisions.md  do-not-use.md  inbox.md  manifest.md  preferences.md
evals/memory-custodian/: eval-manifest.json
hooks/: run-hook.cmd  session-start
scripts/: check-skill-evals.py  check-version.py  memory-custodian  package-codex-plugin.py
tests/: test_add_forget_compact.py  test_cli_errors_mutations.py  test_init.py  test_nightnotes_demo.py  test_plugin_package.py  test_read_status.py  test_reliability.py  test_skill_evals.py  test_windows_smoke.py
(+50 files in other folders)
